--- a/pkg_0.1_2/DESCRIPTION
+++ b/pkg_0.1_2/DESCRIPTION
@@ -1,14 +1,12 @@
 Package: lar
 Type: Package
 Title: History of labour relations package
-Version: 0.1-3
-Date: 2014-04-30
+Version: 0.1-2
+Date: 2014-04-29
 Authors@R: c(person("Richard", "Zijdeman", role = c("aut", "cre"),
   email = "richard.zijdeman@iisg.nl"),
   person("Josemiguel", "Lana-Berasain", role = "ctb", 
-  email = "josem.lana@unavarra.es"),
-  person("Jordi", "Warmenhoven", role = "ctb",
-  email = "jordi.warmenhoven@gmail.com"))
+  email = "josem.lana@unavarra.es"))
 Description: This package is intended for researchers studying historical labour relations (see http://www.historyoflabourrelations.org). The package allows for easy access of excel files in the standard defined by the Global Collaboratory on the History of Labour Relations. The package also allows for visualisation of labour relations according to the Collaboratory's format.
 Imports: data.table, grid, treemap, xlsx
 License: GPL-3
